k8s/apps/mediaserver/overlays/prod/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediaserver
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: "traefik.k8s.235.tdude.co"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - plex.tdude.co
    - sonarr.tdude.co
    - radarr.tdude.co
    - lidarr.tdude.co
    - prowlarr.tdude.co
    - qbittorrent.tdude.co
    - mediaserver.tdude.co
    - requests.mediaserver.tdude.co
    - invites.mediaserver.tdude.co
    secretName: mediaserver-k8s-235-tdude-co-tls
  rules:
  - host: sonarr.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonarr
            port:
              name: http
  - host: radarr.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              name: http
  - host: lidarr.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lidarr
            port:
              name: http
  - host: prowlarr.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              name: http
  - host: qbittorrent.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qui
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-public
  annotations:
  # Provisioned by cert-manager in the ingress above
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: mediaserver-plex-cors@kubernetescrd
    external-dns.alpha.kubernetes.io/target: "traefik.k8s.235.tdude.co"
spec:
  ingressClassName: traefik
  tls:
  - secretName: mediaserver-k8s-235-tdude-co-tls
  rules:
  - host: plex.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-plex
            port:
              name: pms
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediaserver-public
  annotations:
  # Provisioned by cert-manager in the ingress above
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/target: "traefik.k8s.235.tdude.co"
spec:
  ingressClassName: traefik
  tls:
  - secretName: mediaserver-k8s-235-tdude-co-tls
  rules:
  - host: invites.mediaserver.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wizarr
            port:
              name: http
  - host: requests.mediaserver.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: overseerr
            port:
              name: http
  - host: mediaserver.tdude.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              name: http
